--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ input {
     animation: apper-result 1.5s ease;
 }
 
-.please {
+.empty-fields {
     color: #03045e;
     background-color: #ade8f4;
     width: 100%;
